# diskanalyzer

./: .gitignore  CMakeLists.txt  dev-plan.md  readme.md
src/: app.manifest  disk_manager.cpp  disk_manager.h  disk_test.cpp  disk_test.h  main.cpp  ui.cpp  ui.h
